--- a/Дым/ru.lproj/Main.storyboard
+++ b/Дым/ru.lproj/Main.storyboard
@@ -13,58 +13,112 @@
             <objects>
                 <viewController id="4Yn-dL-G71" customClass="MenuDetailProductViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="82K-eK-b2X"/>
-                        <viewControllerLayoutGuide type="bottom" id="jS5-KL-i0e"/>
+                        <viewControllerLayoutGuide type="top" id="hIy-ZG-9RO"/>
+                        <viewControllerLayoutGuide type="bottom" id="ULP-i5-A4h"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Xoa-4H-2s3">
+                    <scrollView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="Mnf-MF-lcB">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ltq-Mp-sHw">
-                                <rect key="frame" x="0.0" y="64" width="300" height="300"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="AMJ-Nc-nVk">
+                                <rect key="frame" x="175" y="0.0" width="250" height="250"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="250" id="5UW-72-SMZ"/>
+                                    <constraint firstAttribute="width" constant="250" id="AnD-IB-SHU"/>
+                                </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="fullDescriptionLabel" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gzc-Nr-OQ4">
-                                <rect key="frame" x="0.0" y="500" width="300" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                <color key="textColor" red="0.59999999999999998" green="0.56078431370000004" blue="0.23921568630000001" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="priceLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VvG-2C-Uja">
-                                <rect key="frame" x="0.0" y="450" width="95" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
-                                <color key="textColor" red="0.59999999999999998" green="0.56078431370000004" blue="0.23921568630000001" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="specialPriceLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q5Q-IX-Fl1">
-                                <rect key="frame" x="150" y="450" width="151" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
-                                <color key="textColor" red="0.59999999999999998" green="0.56078431370000004" blue="0.23921568630000001" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <view alpha="0.20000000000000001" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xVE-v1-qOc" userLabel="ProductPriceView">
-                                <rect key="frame" x="0.0" y="420" width="300" height="72"/>
+                            <view alpha="0.20000000298023224" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="G6S-A8-2O5" userLabel="ProductPriceBack">
+                                <rect key="frame" x="0.0" y="258" width="600" height="48"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="600" id="stq-jp-8Lz"/>
+                                </constraints>
                             </view>
-                            <view alpha="0.20000000000000001" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Kj5-NG-iwX" userLabel="ProductNameView">
-                                <rect key="frame" x="0.0" y="364" width="300" height="58"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="priceLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="ZKE-2F-DwF">
+                                <rect key="frame" x="35" y="258" width="184" height="48"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                <color key="textColor" red="0.59999999999999998" green="0.56078431370000004" blue="0.23921568630000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="specialPriceLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="knM-76-Ts6">
+                                <rect key="frame" x="256" y="258" width="309" height="48"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                <color key="textColor" red="0.59999999999999998" green="0.56078431370000004" blue="0.23921568630000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view alpha="0.20000000298023224" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="90A-66-gfC" userLabel="ProductNameBack">
+                                <rect key="frame" x="0.0" y="326" width="600" height="60"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="600" id="UVr-xc-4gX"/>
+                                </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="nameLabel" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i4c-V7-ks4">
-                                <rect key="frame" x="0.0" y="373" width="300" height="40"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="nameLabel" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="h4B-st-GzE">
+                                <rect key="frame" x="10" y="326" width="580" height="60"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
+                                <color key="textColor" red="0.59999999999999998" green="0.56078431370000004" blue="0.23921568630000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view alpha="0.20000000298023224" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ruo-Nu-rfU" userLabel="ProductDescriptionBack">
+                                <rect key="frame" x="0.0" y="403" width="600" height="39"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="600" id="oDq-ox-MB0"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="fullDescriptionLabel" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="BZk-8O-VLZ">
+                                <rect key="frame" x="10" y="403" width="580" height="39"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                 <color key="textColor" red="0.59999999999999998" green="0.56078431370000004" blue="0.23921568630000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Ruo-Nu-rfU" secondAttribute="trailing" id="0jQ-di-fCh"/>
+                            <constraint firstItem="h4B-st-GzE" firstAttribute="width" secondItem="90A-66-gfC" secondAttribute="width" id="2js-Q6-iZs"/>
+                            <constraint firstItem="AMJ-Nc-nVk" firstAttribute="top" secondItem="Mnf-MF-lcB" secondAttribute="top" id="32M-Kf-yAc"/>
+                            <constraint firstItem="h4B-st-GzE" firstAttribute="trailing" secondItem="90A-66-gfC" secondAttribute="trailing" constant="-10" id="3gV-XQ-AP5"/>
+                            <constraint firstItem="Ruo-Nu-rfU" firstAttribute="top" secondItem="90A-66-gfC" secondAttribute="bottom" constant="17" id="3gi-qx-8pO"/>
+                            <constraint firstItem="G6S-A8-2O5" firstAttribute="leading" secondItem="Mnf-MF-lcB" secondAttribute="leading" id="5Li-vM-i7U"/>
+                            <constraint firstItem="BZk-8O-VLZ" firstAttribute="top" secondItem="Ruo-Nu-rfU" secondAttribute="top" id="6a9-GT-QOP"/>
+                            <constraint firstItem="BZk-8O-VLZ" firstAttribute="bottom" secondItem="Ruo-Nu-rfU" secondAttribute="bottom" id="7K5-o7-bWI"/>
+                            <constraint firstItem="h4B-st-GzE" firstAttribute="leading" secondItem="90A-66-gfC" secondAttribute="leading" constant="10" id="9Eb-kL-cBN"/>
+                            <constraint firstItem="ZKE-2F-DwF" firstAttribute="top" secondItem="G6S-A8-2O5" secondAttribute="top" id="JDt-8y-eJi"/>
+                            <constraint firstItem="BZk-8O-VLZ" firstAttribute="leading" secondItem="Ruo-Nu-rfU" secondAttribute="leading" constant="10" id="VND-iP-wuC"/>
+                            <constraint firstItem="G6S-A8-2O5" firstAttribute="centerX" secondItem="AMJ-Nc-nVk" secondAttribute="centerX" id="VRw-ol-2pm"/>
+                            <constraint firstItem="Ruo-Nu-rfU" firstAttribute="leading" secondItem="Mnf-MF-lcB" secondAttribute="leading" id="XOh-1T-24m"/>
+                            <constraint firstItem="ZKE-2F-DwF" firstAttribute="bottom" secondItem="G6S-A8-2O5" secondAttribute="bottom" id="Z0R-2U-kiA"/>
+                            <constraint firstAttribute="trailing" secondItem="G6S-A8-2O5" secondAttribute="trailing" id="Z5F-8F-Ze5"/>
+                            <constraint firstItem="knM-76-Ts6" firstAttribute="top" secondItem="G6S-A8-2O5" secondAttribute="top" id="gGH-XU-rRo"/>
+                            <constraint firstItem="h4B-st-GzE" firstAttribute="bottom" secondItem="90A-66-gfC" secondAttribute="bottom" id="gbY-BK-zA0"/>
+                            <constraint firstItem="G6S-A8-2O5" firstAttribute="top" secondItem="AMJ-Nc-nVk" secondAttribute="bottom" constant="8" id="ghS-Wz-UG5"/>
+                            <constraint firstItem="ZKE-2F-DwF" firstAttribute="leading" secondItem="G6S-A8-2O5" secondAttribute="leading" constant="35" id="lNg-Vx-0pV"/>
+                            <constraint firstAttribute="bottom" secondItem="Ruo-Nu-rfU" secondAttribute="bottom" id="nda-ZC-TDX"/>
+                            <constraint firstItem="BZk-8O-VLZ" firstAttribute="width" secondItem="Ruo-Nu-rfU" secondAttribute="width" id="oCL-id-09A"/>
+                            <constraint firstItem="90A-66-gfC" firstAttribute="top" secondItem="G6S-A8-2O5" secondAttribute="bottom" constant="20" id="opI-gi-WlU"/>
+                            <constraint firstItem="90A-66-gfC" firstAttribute="leading" secondItem="Mnf-MF-lcB" secondAttribute="leading" id="raF-m0-e7y"/>
+                            <constraint firstItem="knM-76-Ts6" firstAttribute="trailing" secondItem="G6S-A8-2O5" secondAttribute="trailing" constant="-35" id="sD6-WP-nwL"/>
+                            <constraint firstItem="AMJ-Nc-nVk" firstAttribute="centerX" secondItem="Mnf-MF-lcB" secondAttribute="centerX" id="u5f-ZW-REh"/>
+                            <constraint firstItem="h4B-st-GzE" firstAttribute="top" secondItem="90A-66-gfC" secondAttribute="top" id="uYZ-45-PeU"/>
+                            <constraint firstItem="knM-76-Ts6" firstAttribute="bottom" secondItem="G6S-A8-2O5" secondAttribute="bottom" id="v6p-Xp-gqG"/>
+                            <constraint firstItem="BZk-8O-VLZ" firstAttribute="trailing" secondItem="Ruo-Nu-rfU" secondAttribute="trailing" constant="-10" id="yXH-sX-ZFo"/>
+                            <constraint firstAttribute="trailing" secondItem="90A-66-gfC" secondAttribute="trailing" id="zms-qJ-wng"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="2js-Q6-iZs"/>
+                                <exclude reference="oCL-id-09A"/>
+                            </mask>
+                        </variation>
+                    </scrollView>
                     <navigationItem key="navigationItem" id="6rS-iV-0ro"/>
                     <connections>
-                        <outlet property="productDescriptionLabel" destination="Gzc-Nr-OQ4" id="3fE-dS-KQl"/>
-                        <outlet property="productImageView" destination="ltq-Mp-sHw" id="ilv-eK-9ZF"/>
-                        <outlet property="productNameLabel" destination="i4c-V7-ks4" id="D7J-Q2-BaD"/>
-                        <outlet property="productPriceLabel" destination="VvG-2C-Uja" id="BKn-wP-J9f"/>
-                        <outlet property="productSpecialPriceLabel" destination="Q5Q-IX-Fl1" id="XoC-iR-BKS"/>
+                        <outlet property="detailProductScrollView" destination="Mnf-MF-lcB" id="v4w-r1-AZ1"/>
+                        <outlet property="productDescriptionLabel" destination="BZk-8O-VLZ" id="hXc-hJ-CaF"/>
+                        <outlet property="productImageView" destination="AMJ-Nc-nVk" id="HvW-dY-ps5"/>
+                        <outlet property="productNameLabel" destination="h4B-st-GzE" id="m0Z-IK-k8X"/>
+                        <outlet property="productPriceLabel" destination="ZKE-2F-DwF" id="czk-Kf-tc9"/>
+                        <outlet property="productSpecialPriceLabel" destination="knM-76-Ts6" id="Gdp-mJ-Aj3"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XdN-xq-9cO" userLabel="First Responder" sceneMemberID="firstResponder"/>
